examples/test/testpolicy5617.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5617
  namespace: namespace90
spec:
  podSelector:
    matchLabels:
      key49: value23
      key44: value10
      key29: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value18
      podSelector:
        matchLabels:
          key35: value27
